# server/src/app/preferences/index.js
@@ -1,0 +1,4 @@
+module.exports = {
+  GetPreferences: require("./GetPreferences"),
+  UpdatePreferences: require("./UpdatePreferences")
+};
