# server/src/interfaces/http/swagger/swagger.json
@@ -48,6 +48,10 @@
     {
       "name": "shipping",
       "description": "Shipping information"
+    },
+    {
+      "name": "preferences",
+      "description": "Consumer preferences"
     }
   ],
   "paths": {
@@ -797,7 +801,7 @@
             "description": "User object with email/phone and password",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/LoginUser"
             }
           }
         ],
@@ -970,7 +974,7 @@
         "tags": [
           "community"
         ],
-        "summary": "Finds all communities",
+        "summary": "Find all communities",
         "description": "Find all communities.",
         "operationId": "findCommunities",
         "produces": [
@@ -1048,6 +1052,67 @@
           },
           "400": {
             "description": "Invalid status value"
+          }
+        }
+      }
+    },
+    "/preferences": {
+      "get": {
+        "tags": [
+          "preferences"
+        ],
+        "summary": "Get customer preferences",
+        "description": "Get customer preferences by id",
+        "operationId": "getPreferences",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Preferences"
+            }
+          },
+          "400": {
+            "description": "Invalid data supplied"
+          },
+          "404": {
+            "description": "Consumer id not found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "preferences"
+        ],
+        "summary": "Update customer preferences",
+        "description": "Update customer preferences by id",
+        "operationId": "updatePreferences",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [{
+          "in": "body",
+          "name": "body",
+          "description": "Add shipping information for user",
+          "required": true,
+          "schema": {
+            "$ref": "#/definitions/Preferences"
+          }
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Preferences"
+            }
+          },
+          "400": {
+            "description": "Invalid data supplied"
+          },
+          "404": {
+            "description": "Consumer id not found"
           }
         }
       }
@@ -1347,6 +1412,17 @@
         }
       }
     },
+    "LoginUser": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
     "Department": {
       "type": "object",
       "properties": {
@@ -1499,6 +1575,25 @@
           "type": "string"
         },
         "agent_designation": {
+          "type": "string"
+        }
+      }
+    },
+    "Preferences": {
+      "type": "object",
+      "properties": {
+        "customer_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "community_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "community_name": {
+          "type": "string"
+        },
+        "language_code": {
           "type": "string"
         }
       }
